env/base/main/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myapp-ui-development
spec: {}
status: {}
