env/base/main/myapp-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: myapp-ui
    app.kubernetes.io/part-of: liberty
  name: myapp-ui
  namespace: myapp-ui-development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp-ui
  template:
    metadata:
      labels:
        app: myapp-ui
    spec:
      containers:
      - name: myapp-ui
        image: image-registry.openshift-image-registry.svc:5000/myapp-ui-ci/myapp-ui-runtime  
        imagePullPolicy: Always
        ports:
        - containerPort: 9080
          name: http
          protocol: TCP
