env/base/main/myapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-ui
  labels:
    app: myapp-ui
  namespace: myapp-ui-development
spec:
  ports:
  - name: http
    port: 9080
  selector:
    app: myapp-ui
