env/base/main/myapp-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  labels:
    app: myapp-ui
  name: myapp-ui-route
  namespace: myapp-ui-development
spec:
  to:
    kind: Service
    name: myapp-ui
